closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/LOS_Credit_Application__c.object-meta.xml
<CustomObject>
    <description>Service-managed application with organization snapshots captured at creation, configured lifecycle state and optimistic runtime version.</description>
    <label>LOS Credit Application</label>
    <nameField>
        <displayFormat>APP-{00000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOS Credit Application Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>