closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Baseline_Application__c.field-meta.xml
<CustomField>
    <fullName>LOS_Baseline_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Baseline Application. See docs/data-dictionary.md for usage.</description>
    <label>Baseline Application</label>
    <referenceTo>LOS_Credit_Application__c</referenceTo>
    <relationshipLabel>LOS Credit Application Baseline Application</relationshipLabel>
    <relationshipName>LOS_Credit_Application_Baseline_Applicat</relationshipName>
    <type>Lookup</type>
</CustomField>