closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>LOS_Booking_Date__c</fullName>
    <description>Booking Date. See docs/data-dictionary.md for usage.</description>
    <label>Booking Date</label>
    <type>DateTime</type>
</CustomField>