closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Current_Queue_Key__c.field-meta.xml
<CustomField>
    <fullName>LOS_Current_Queue_Key__c</fullName>
    <description>Portable Group.DeveloperName for a Queue. OwnerId is authoritative for actual Salesforce ownership; future service resolves and validates this key.</description>
    <label>Current Queue Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>