closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Organization_Unit__c.field-meta.xml
<CustomField>
    <fullName>LOS_Organization_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Organization Unit. See docs/data-dictionary.md for usage.</description>
    <label>Organization Unit</label>
    <referenceTo>LOS_Organization_Unit__c</referenceTo>
    <relationshipLabel>LOS Credit Application Organization Unit</relationshipLabel>
    <relationshipName>LOS_Credit_Application_Organization_Unit</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>