closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Previous_Approved_Application__c.field-meta.xml
<CustomField>
    <fullName>LOS_Previous_Approved_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Approved Application. See docs/data-dictionary.md for usage.</description>
    <label>Previous Approved Application</label>
    <referenceTo>LOS_Credit_Application__c</referenceTo>
    <relationshipLabel>LOS Credit Application Previous Approved Application</relationshipLabel>
    <relationshipName>LOS_Credit_Application_Previous_Approved</relationshipName>
    <type>Lookup</type>
</CustomField>