closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Primary_RM__c.field-meta.xml
<CustomField>
    <fullName>LOS_Primary_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary RM. See docs/data-dictionary.md for usage.</description>
    <label>Primary RM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>LOS Credit Application Primary RM</relationshipLabel>
    <relationshipName>LOS_Credit_Application_Primary_RM</relationshipName>
    <type>Lookup</type>
</CustomField>