closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Relationship__c.field-meta.xml
<CustomField>
    <fullName>LOS_Relationship__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relationship. See docs/data-dictionary.md for usage.</description>
    <label>Relationship</label>
    <referenceTo>LOS_Relationship__c</referenceTo>
    <relationshipLabel>LOS Credit Application Relationship</relationshipLabel>
    <relationshipName>LOS_Credit_Application_Relationship</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>