closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Runtime_Version__c.field-meta.xml
<CustomField>
    <fullName>LOS_Runtime_Version__c</fullName>
    <description>Controlled by LOS runtime services. See docs/task-02-runtime.md.</description>
    <label>Runtime Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>