closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Status__c.field-meta.xml
<CustomField>
    <fullName>LOS_Status__c</fullName>
    <description>Status. See docs/data-dictionary.md for usage.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>