closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/fields/LOS_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>LOS_Submitted_Date__c</fullName>
    <description>Submitted Date. See docs/data-dictionary.md for usage.</description>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>