closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/validationRules/LOS_No_Self_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_No_Self_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(LOS_Baseline_Application__c)), LOS_Baseline_Application__c = Id), AND(NOT(ISBLANK(LOS_Previous_Approved_Application__c)), LOS_Previous_Approved_Application__c = Id))</errorConditionFormula>
    <errorMessage>Application lineage cannot reference itself.</errorMessage>
</ValidationRule>