closDevOrg/force-app/main/default/objects/LOS_Credit_Application__c/validationRules/LOS_Nonnegative_Measures.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Nonnegative_Measures</fullName>
    <active>true</active>
    <errorConditionFormula>OR(LOS_Rework_Count__c &lt; 0,LOS_Current_Rework_Number__c &lt; 0)</errorConditionFormula>
    <errorMessage>Counts and minutes cannot be negative.</errorMessage>
</ValidationRule>